--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Caesar Cypher</title>
     <script src="output.json"></script>
-    <script src="CaesarCypher.js"></script>
+    <script src="javascript/CaesarCypher.js"></script>
 </head>
 <body>
     <h1>Caesar Cypher</h1>
