--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Caesar Cypher</title>
-    <script src="output.json"></script>
     <script src="javascript/CaesarCypher.js"></script>
 </head>
 <body>
     <h1>Caesar Cypher</h1>
     <h3>Message:</h3>
-    <textarea id="txtarea" rows="10" cols="30" style="width:100%;height:50%;text-overflow: ellipsis; white-space: nowrap; overflow: hidden;" >
-b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd
-    </textarea>
+    <textarea id="txtarea" rows="10" cols="30" style="width:100%;height:50%;text-overflow: wrap;wrap: hard; white-space: wrap; overflow: hidden;" >
+b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
     <h3>Seed:</h3>
     <input type="number" id="seed">
-    <button onclick="document.getElementById('txtarea').value = encode(document.getElementById('seed').value, document.getElementById('txtarea').value)">Encode<br/></button>
-    <button onclick="document.getElementById('txtarea').value = decode(document.getElementById('seed').value, document.getElementById('txtarea').value)">Decode<br/></button>
-    <button onclick="document.getElementById('seed').value = keyFinder(document.getElementById('txtarea').value)">Get Key<br /></button>
+    <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Encode<br/></button>
+    <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decode<br/></button>
+    <button onclick="keyFinder(document.getElementById('txtarea').value)">Get Key<br /></button>
 </body>
 </html>
