--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Caesar Cypher</title>
     <script src="javascript/CaesarCypher.js"></script>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>Caesar Cypher</h1>
