--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Caesar Cypher</title>
     <script src="javascript/CaesarCypher.js"></script>
     <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -11,10 +9,13 @@
 <body>
     <h1>Caesar Cypher</h1>
     <h3>Message:</h3>
-    <textarea id="txtarea" rows="10" cols="30" style="width:100%;height:50%;text-overflow: wrap;wrap: hard; white-space: wrap; overflow: hidden;" >
+    <textarea id="txtarea" rows="10" cols="30" style="width:100%; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
 b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
-    <h3>Seed:</h3>
-    <input type="number" id="seed">
+    <div style="display: flex; align-items: center;">
+        <h3>Seed:</h3>
+        <textarea id="seed" rows="1" cols="2" style="width:2vw; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none; text-align: center;"></textarea>
+    </div>
+    
     <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Encode<br/></button>
     <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decode<br/></button>
     <button onclick="keyFinder(document.getElementById('txtarea').value)">Get Key<br /></button>
