--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Caesar Cypher</h1>
+    <div style="display: flex; align-items: center; width:100%; margin-top:2vw;">
+        <h1 style="left: 0; margin-right:auto;">Caesar Cypher</h1>
+        <a href="about.html" style="right: 0; margin-left:auto;">About</a>
+    </div>
     <h3>Message:</h3>
     <textarea id="txtarea" rows="10" cols="30" style="width:100%; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
 b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
     <div style="display: flex; align-items: center;">
         <h3>Seed:</h3>
-        <textarea id="seed" rows="1" cols="2" style="width:2vw; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none; text-align: center;"></textarea>
+        <textarea id="seed" rows="1" cols="2" style="width:2vw; height:2vw;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none; text-align: center; padding:0.1rem;"></textarea>
     </div>
     
     <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Encode<br/></button>
