--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1 style="left: 0; margin-right:auto;">Caesar Cypher</h1>
         <a href="about.html" style="right: 0; margin-left:auto;">About</a>
     </div>
-    <h3>Message:</h3>
+    <h2>Message:</h2>
     <textarea id="txtarea" rows="10" cols="30" style="width:100%; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
 b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
     <div style="display: flex; align-items: center;">
-        <h3>Seed:</h3>
+        <h2 style="margin-right: 1vw;">Seed:</h2>
         <textarea id="seed" rows="1" cols="2" style="width:2vw; height:2vw;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none; text-align: center; padding:0.1rem;"></textarea>
     </div>
     
