--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <div style="display: flex; align-items: center; width:100%; margin-top:2vw;">
-        <h1 style="left: 0; margin-right:auto;">Caesar Cypher</h1>
-        <a href="about.html" style="right: 0; margin-left:auto;">About</a>
+        <h1 style="left: 0; margin-right:auto;">CaesarCypher</h1>
+        <a href="about.html" style="right: 0; margin-left:auto;">Información</a>
     </div>
-    <h2>Message:</h2>
+    <h2>Mensaje:</h2>
     <textarea id="txtarea" rows="10" cols="30" style="width:100%; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
 b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
     <div style="display: flex; align-items: center;">
-        <h2 style="margin-right: 1vw;">Seed:</h2>
+        <h2 style="margin-right: 1vw;">Llave:</h2>
         <textarea id="seed" rows="1" cols="2" style="width:2vw; height:2vw;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none; text-align: center; padding:0.1rem;"></textarea>
     </div>
     
-    <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Encode<br/></button>
-    <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decode<br/></button>
-    <button onclick="keyFinder(document.getElementById('txtarea').value)">Get Key<br /></button>
+    <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Codificar<br/></button>
+    <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decodificar<br/></button>
+    <button onclick="keyFinder(document.getElementById('txtarea').value)">Obtener Llave<br /></button>
 </body>
 </html>
