--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <div style="display: flex; align-items: center; width:100%; margin-top:2vw;">
         <h1 style="left: 0; margin-right:auto;">Ayuda</h1>
-        <a href="index.html" style="right: 0; margin-left:auto;">Regresar</a>
+        <a href="index.html" style="right: 0; margin-left:auto;"><</a>
     </div>
     <h2>Instrucciones:</h2>
     <br>
