--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div style="display: flex; align-items: center; width:100%; margin-top:2vw;">
         <h1 style="left: 0; margin-right:auto;">CaesarCypher</h1>
-        <a href="about.html" style="right: 0; margin-left:auto;">Información</a>
+        <a href="about.html" style="right: 0; margin-left:auto;">?</a>
     </div>
     <h2>Mensaje:</h2>
     <textarea id="txtarea" rows="10" cols="30" style="width:100%; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
