--- a/index.html
+++ b/index.html
@@ -22,5 +22,34 @@ b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, 
     <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Codificar<br/></button>
     <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decodificar<br/></button>
     <button onclick="keyFinder(document.getElementById('txtarea').value)">Obtener Llave<br /></button>
+
+    <div style="display: flex; width: 100%;">
+        <div id="a"></div>
+        <div id="b"></div>
+        <div id="c"></div>
+        <div id="d"></div>
+        <div id="e"></div>
+        <div id="f"></div>
+        <div id="g"></div>
+        <div id="h"></div>
+        <div id="i"></div>
+        <div id="j"></div>
+        <div id="k"></div>
+        <div id="l"></div>
+        <div id="m"></div>
+        <div id="n"></div>
+        <div id="o"></div>
+        <div id="p"></div>
+        <div id="q"></div>
+        <div id="r"></div>
+        <div id="s"></div>
+        <div id="t"></div>
+        <div id="u"></div>
+        <div id="v"></div>
+        <div id="w"></div>
+        <div id="x"></div>
+        <div id="y"></div>
+        <div id="z"></div>
+    </div>
 </body>
 </html>
