--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, 
     <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Codificar<br/></button>
     <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decodificar<br/></button>
     <button onclick="keyFinder(document.getElementById('txtarea').value)">Obtener Llave<br /></button>
-
-    <div style="display: flex; width: 100%;">
+    
+    <h2>Tabla de Chi Cuadradas</h2>
+    <div style="display: flex; width: 80%; height: 5vw; margin: auto; margin-bottom: 0; align-items:flex-end; justify-content: center;">
         <div id="a"></div>
         <div id="b"></div>
         <div id="c"></div>
@@ -50,6 +51,34 @@ b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, 
         <div id="x"></div>
         <div id="y"></div>
         <div id="z"></div>
+    </div>
+    <div style="display: flex; width: 80%; margin: auto; margin-bottom: 5vw;">
+        <h5>0</h5>
+        <h5>1</h5>
+        <h5>2</h5>
+        <h5>3</h5>
+        <h5>4</h5>
+        <h5>5</h5>
+        <h5>6</h5>
+        <h5>7</h5>
+        <h5>8</h5>
+        <h5>9</h5>
+        <h5>10</h5>
+        <h5>11</h5>
+        <h5>12</h5>
+        <h5>13</h5>
+        <h5>14</h5>
+        <h5>15</h5>
+        <h5>16</h5>
+        <h5>17</h5>
+        <h5>18</h5>
+        <h5>19</h5>
+        <h5>20</h5>
+        <h5>21</h5>
+        <h5>22</h5>
+        <h5>23</h5>
+        <h5>24</h5>
+        <h5>25</h5>
     </div>
 </body>
 </html>
