--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@ b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, 
         <textarea class="key" id="seed" rows="1" cols="2"></textarea>
     </div>
     
-    <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Codificar<br/></button>
-    <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decodificar<br/></button>
-    <button onclick="keyFinder(document.getElementById('txtarea').value)">Obtener Llave<br /></button>
+    <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Codificar</button>
+    <button onclick="decode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Decodificar</button>
+    <button onclick="keyFinder(document.getElementById('txtarea').value)">Obtener Llave</button>
+    <button onclick="bruteForce(document.getElementById('txtarea').value)">Fuerza Bruta</button>
     
     <h2>Tabla de Chi Cuadradas</h2>
     <div style="display: flex; width: 80%; height: 5vw; margin: auto; margin-bottom: 0; align-items:flex-end; justify-content: center;">
