--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="about.html" style="right: 0; margin-left:auto;">?</a>
     </div>
     <h2>Mensaje:</h2>
-    <textarea id="txtarea" rows="10" cols="30" style="width:100%; height:50%;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
+    <textarea id="txtarea" rows="10" cols="30" style="width:100%; height: auto;text-overflow: wrap; white-space: wrap; overflow: hidden; resize: none;" >
 b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
     <div style="display: flex; align-items: center;">
         <h2 style="margin-right: 1vw;">Llave:</h2>
@@ -25,7 +25,7 @@ b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, 
     <button onclick="bruteForce(document.getElementById('txtarea').value)">Fuerza Bruta</button>
     
     <h2>Tabla de Chi Cuadradas</h2>
-    <div style="display: flex; width: 80%; height: 5vw; margin: auto; margin-bottom: 0; align-items:flex-end; justify-content: center;">
+    <div style="display: flex; width: 100%; height: 30vw; margin: auto; margin-bottom: 0; align-items:flex-end; justify-content: center;">
         <div id="a"></div>
         <div id="b"></div>
         <div id="c"></div>
@@ -53,7 +53,7 @@ b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, 
         <div id="y"></div>
         <div id="z"></div>
     </div>
-    <div style="display: flex; width: 80%; margin: auto; margin-bottom: 5vw;">
+    <div style="display: flex; width: 100%; margin: auto; margin-bottom: 5vw;">
         <h5>0</h5>
         <h5>1</h5>
         <h5>2</h5>
