--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 b ho fxhuyr qxqfd hpsuhqglr ho yxhor, dxq vljxh srvdgr vreuh ho exvwr gh sdodv, vreuh ho glqwho gh pl sxhuwd</textarea>
     <div style="display: flex; align-items: center;">
         <h2 style="margin-right: 1vw;">Llave:</h2>
-        <input type="number" class="key" id="seed" placeholder="0">
+        <input type="number" class="key" id="seed" value="0">
     </div>
     
     <button onclick="encode(parseInt(document.getElementById('seed').value), document.getElementById('txtarea').value)">Codificar</button>
